source/_scss/_post.scss
.post--content,
.post--comments,
.post--related {
  margin-bottom: 5rem;
  max-width: 100%;
  overflow: hidden;
}

.post--heading {
  @include background-img($color-midnight);

  height: 40rem;
  margin-bottom: 6rem;
  position: relative;
  width: 100%;

  .container {
    height: 100%;
  }
}

.post--heading-overlay {
  background-color: darken($color-asphalt, 5%);
  bottom: 0;
  opacity: 0.2;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  transition: opacity 0.1s;
}

.post--heading-content {
  bottom: 1.5rem;
  color: $color-white;
  display: block;
  line-height: 1.3;
  position: absolute;
  width: 100%;
}

.post--title {
  color: $color-white;
  font-size: 3.1rem;
  margin: 0 0 2rem;
  max-width: 80%;
}

&.alt-small .post--content {
  font-size: 90%;
}

&.alt-large .post--content {
  font-size: 110%;
}

